Revision history for {{$dist->name}}

{{$NEXT}}
          - dropped [Test::CheckDeps]
          - xt/ tests are now run before t/
          - compile test now generated as xt/author/00-compile.t
          - prereqs are noisly, but non-fatally, verified in
            t/00-report-prereqs.t

0.028     2013-10-06 06:17:12Z (Karen Etheridge)
          - injected t/00-check-deps.t no longer bails out when failures are
            encountered
          - the shell command used to update the local .ackrc is now POSIX
            shell compatible
          - fix unit tests that broke when Dist::Zilla::Plugin::InstallGuide
            1.200001 was released (which retroactively broke the 0.027
            release)

0.027     2013-09-27 03:50:26Z (Karen Etheridge)
          - minted dists once again use the default 'installer' value (now
            [MakeMaker::Fallback] and [ModuleBuildTiny], since 0.025)
          - added missing required prereqs, and now properly skipping relevant
            tests when optional dependencies are not installed (with guard
            tests to verify that all prereqs are properly declared) (RT#88977)

0.026     2013-09-25 02:00:04Z (Karen Etheridge)
          - skip relevant tests when optional dependencies are not installed

0.025     2013-09-22 22:04:46Z (Karen Etheridge)
          - added missing dependency on [MojibakeTests] (RT#88807)
          - fixed bad dependency for NoTabs tester that changed names
          - make tests run without git again (broken in 0.024) by removing all
            git-based plugins for testing
          - now generating a t/00-report-prereqs.t
          - 'installer' option can now be specified more than once, for
            stacking plugins
          - new installer default: MakeMaker::Fallback and ModuleBuildTiny
            (RT#88642)

0.024     2013-09-19 02:29:14Z (Karen Etheridge)
          - now also support the server = catagits option, for Catalyst