@@ -26,6 +26,7 @@ Dist::Zilla::Plugin::MetaJSON = 0
 Dist::Zilla::Plugin::License = 0
 Dist::Zilla::Plugin::Readme = 0
 Dist::Zilla::Plugin::Manifest = 0
+Dist::Zilla::Plugin::GenerateFile::ShareDir = 0
 Dist::Zilla::Plugin::Test::Compile = 2.023
 Dist::Zilla::Plugin::Test::NoTabs = 0
 Dist::Zilla::Plugin::EOLTests = 0
