@@ -27,6 +27,11 @@ filename = LICENSE
 is_template = 0
 content =
 
+[GenerateFile / CONTRIBUTING]
+filename = CONTRIBUTING
+is_template = 0
+content =
+
 ; we can't just include this file in skel because
 ; File::ShareDir::Install::_scan_share_dir unconditionally skips all dotfiles.
 [GenerateFile / gitignore]
