@@ -1,0 +1,72 @@
+
+CONTRIBUTING
+
+Thank you for considering contributing to this distribution.  This file
+contains instructions that will help you work with the source code.
+
+The distribution is managed with Dist::Zilla.  This means than many of the
+usual files you might expect are not in the repository, but are generated
+at release time (e.g. Makefile.PL).
+
+However, you can run tests directly using the 'prove' tool:
+
+  $ prove -l
+  $ prove -lv t/some_test_file.t
+  $ prove -lvr t/
+
+For most distributions, 'prove' is entirely sufficent for you to test any
+patches you have.
+
+You may need to satisfy some dependencies.  See the included META.json
+file for a list.  If you install App::mymeta_requires from CPAN, it's easy
+to satisfy any that you are missing by piping the output to your favorite
+CPAN client:
+
+  $ mymeta-requires | cpanm
+  $ cpan `mymeta-requires`
+
+or if you use cpanminus, you can simply do:
+
+  $ cpanm --installdeps .
+
+Dist::Zilla is a very powerful authoring tool, but requires a number of
+author-specific plugins.  If you would like to use it for contributing,
+install it from CPAN, then run one of the following commands, depending on
+your CPAN client:
+
+  $ cpan `dzil authordeps`
+  $ dzil authordeps | cpanm
+
+Once installed, here are some dzil commands you might try:
+
+  $ dzil build
+  $ dzil test
+  $ dzil test --release
+  $ dzil xtest
+
+You can learn more about Dist::Zilla at http://dzil.org/.
+{{
+if ((my $url = $dist->distmeta->{resources}{repository}{url}) =~ /github/) {
+"\n" . 'The code for this distribution is hosted at GitHub. The main repository is:
+' . $url . '.
+You can submit code changes by forking the repository, pushing your code
+changes to your clone, and then submitting a pull request. Detailed
+instructions for doing that is available here:
+
+https://help.github.com/
+https://help.github.com/articles/creating-a-pull-request' }
+}}
+
+If you have found a bug, but do not have an accompanying patch to fix it, you
+can submit an issue report here:
+{{ $dist->distmeta->{resources}{bugtracker}{web} }}
+or via {{ $dist->distmeta->{resources}{bugtracker}{mailto} }}.
+{{
+$dist->distmeta->{resources}{x_MailingList}
+    ? "\n" . 'There is also a mailing list available for users of this distribution, at' . "\n" . $dist->distmeta->{resources}{x_MailingList} . '.'
+    : 'This is also a good place to send your questions about the usage of this distribution.';
+}}
+
+
+This file was generated via {{ ref($plugin) . ' ' . ($plugin->VERSION || '<self>') }} from a
+template file originating in {{ $plugin->dist . '-' . ($plugin->dist =~ s/-/::/gr)->VERSION }}.
