@@ -15,6 +15,8 @@ use Test::Requires qw(
     Dist::Zilla::Plugin::ModuleBuildTiny
 );
 
+use Test::File::ShareDir -share => { -dist => { 'Dist-Zilla-PluginBundle-Author-ETHER' => 'share' } };
+
 use lib 't/lib';
 use Helper;
 
